# midnight-did-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile  rustfmt.toml  taplo.toml
.antigravitycli/: 40f239bb-7c21-4a53-94ae-a4ea616f2b0f.json
.github/workflows/: ci.yml
crates/midnight-did/: Cargo.toml  README.md
crates/midnight-did-api/: Cargo.toml  README.md
crates/midnight-did-api/src/: contract.rs  controller_operations.rs  did_operations.rs  document_operations.rs  error.rs  ledger_mappers.rs  lib.rs  network_mapping.rs  private_state.rs  resolution.rs  service_operations.rs  subject.rs  verification_method_operations.rs
crates/midnight-did-api/tests/: builder_validation.rs  controller.rs  decode_validation.rs  did_api_end_to_end.rs  error_hierarchy.rs  ledger_mappers.rs  private_state.rs  runtime_domain_roundtrip.rs  verification_methods.rs
crates/midnight-did-api/tests/fixtures/: README.md  after-deactivate.json  after-remove-vm.json  after-rotate-controller-key.json  after-set-aka-insert.json  after-set-aka-remove.json  after-set-schnorr-jubjub-vm-insert.json  after-set-service-insert.json  after-set-verification-method.json  after-set-vm-relation-insert.json  after-set-vm-update.json  initial-state.json
crates/midnight-did-cli/: Cargo.toml  README.md
crates/midnight-did-cli/src/: fixtures.rs  flow.rs  main.rs  printer.rs
crates/midnight-did-domain/: Cargo.toml  README.md
crates/midnight-did-domain/src/: crypto_codecs.rs  did_document.rs  did_registrar.rs  did_resolver.rs  ids.rs  ledger_utils.rs  lib.rs  offchain.rs  uri.rs
crates/midnight-did-domain/tests/: constructors.rs  did_document_builder.rs  ids.rs  midnight.rs
crates/midnight-did-method/: Cargo.toml  README.md
crates/midnight-did-method/src/: hex_ext.rs  lib.rs  midnight_did.rs  network_mapping.rs  offchain.rs
crates/midnight-did-method/tests/: hex_ext.rs  midnight.rs
crates/midnight-did-runtime/: Cargo.toml
crates/midnight-did-runtime/src/: backend.rs  contract_call.rs  contract_wrapper.rs  lib.rs
crates/midnight-did-runtime/src/contract/: generated.rs  mod.rs
crates/midnight-did-uniffi/: Cargo.toml  README.md  build.rs
crates/midnight-did-uniffi/src/: api.rs  error.rs  handle.rs  lib.rs
crates/midnight-did/src/: lib.rs
doc/: architecture.md
doc/adr/: 0001-async-only-api.md  0002-trait-erasure-for-contract.md  0003-crate-split-2-to-4-with-umbrella.md  0004-private-state-as-trait.md  0005-codegen-gap-handling.md  0006-runtime-crate-halo2-block.md  0007-type-safety-sweep.md  0008-contract-abstraction-reform-deferred.md  0008-contract-abstraction-reform.md
doc/specs/: 2026-06-23-r1-type-safety-sweep-design.md  2026-06-24-r2-contract-abstraction-design.md
docs/superpowers/notes/: 2026-06-03-session-summary.md
docs/superpowers/plans/: 2026-05-29-cycle-1-bootstrap-compact-spike.md
docs/superpowers/research/: 2026-06-03-codegen-gaps-did-compact.md  2026-06-03-ts-port-plan.md
docs/superpowers/specs/: 2026-05-29-cycle-1-bootstrap-compact-spike-design.md
nix/: compact.nix  devShells.nix  overlays.nix  rustTools.nix
