[workspace]
resolver = "3"
members  = ["crates/midnight-did"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "Apache-2.0"
authors      = ["Midnight Foundation"]
repository   = "https://github.com/yshyn-iohk/midnight-did-rs"

[workspace.dependencies]
# midnight-ledger crates (path-mounted by devshell into third_party/midnight-ledger)
midnight-base-crypto      = { path = "third_party/midnight-ledger/base-crypto" }
midnight-coin-structure   = { path = "third_party/midnight-ledger/coin-structure" }
midnight-onchain-runtime  = { path = "third_party/midnight-ledger/onchain-runtime" }
midnight-onchain-state    = { path = "third_party/midnight-ledger/onchain-state" }
midnight-onchain-vm       = { path = "third_party/midnight-ledger/onchain-vm" }
midnight-serialize        = { path = "third_party/midnight-ledger/serialize" }
midnight-storage          = { path = "third_party/midnight-ledger/storage" }
midnight-transient-crypto = { path = "third_party/midnight-ledger/transient-crypto" }
midnight-zkir             = { path = "third_party/midnight-ledger/zkir" }
midnight-zswap            = { path = "third_party/midnight-ledger/zswap" }
# compact's runtime helper crate (path-mounted by devshell into third_party/compact-runtime-rs)
compact-runtime           = { path = "third_party/compact-runtime-rs" }
# common
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"

[profile.dev]
debug = "limited"

[profile.release]
lto       = "thin"
codegen-units = 1
