[workspace]
resolver = "3"
members  = ["crates/midnight-did", "crates/midnight-did-api", "crates/midnight-did-cli", "crates/midnight-did-domain"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "Apache-2.0"
authors      = ["Midnight Foundation"]
repository   = "https://github.com/yshyn-iohk/midnight-did-rs"

[workspace.dependencies]
# midnight-ledger crates (path-mounted by devshell into third_party/midnight-ledger)
midnight-base-crypto      = { path = "third_party/midnight-ledger/base-crypto" }
midnight-coin-structure   = { path = "third_party/midnight-ledger/coin-structure" }
midnight-onchain-runtime  = { path = "third_party/midnight-ledger/onchain-runtime" }
midnight-onchain-state    = { path = "third_party/midnight-ledger/onchain-state" }
midnight-onchain-vm       = { path = "third_party/midnight-ledger/onchain-vm" }
midnight-serialize        = { path = "third_party/midnight-ledger/serialize" }
midnight-storage          = { path = "third_party/midnight-ledger/storage" }
midnight-transient-crypto = { path = "third_party/midnight-ledger/transient-crypto" }
midnight-zkir             = { path = "third_party/midnight-ledger/zkir" }
midnight-zswap            = { path = "third_party/midnight-ledger/zswap" }
# compact's runtime helper crate (path-mounted by devshell into third_party/compact-runtime-rs)
compact-runtime           = { path = "third_party/compact-runtime-rs" }
# common
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"
# domain crate (pure-data Midnight DID types)
# `version = "=0.1.0"` is required for `cargo publish` to accept midnight-did-api's
# manifest — crates.io rejects path-only dependencies. The `=` pin keeps the two
# crates lock-stepped: bumping midnight-did-api to 0.1.1 must also bump
# midnight-did-domain to 0.1.1. Same pattern as compact-runtime + compact-runtime-macros
# in the codegen-rust toolchain.
midnight-did-domain = { path = "crates/midnight-did-domain", version = "=0.1.0" }

[profile.dev]
debug = "limited"

[profile.release]
lto       = "thin"
codegen-units = 1
