[package]
name                   = "midnight-did-domain"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage               = "https://github.com/yshyn-iohk/midnight-did-rs"
documentation          = "https://docs.rs/midnight-did-domain"
readme                 = "README.md"
description            = "Pure-data Rust domain layer for the Midnight DID method (W3C DID Core + MOD1 offchain encoder, no midnight-* deps)."
keywords               = ["midnight", "did", "w3c-did", "ssi", "identity"]
categories             = ["cryptography", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
thiserror  = "2"
url        = "2"
base64     = "0.22"
blake2     = "0.10"

[dev-dependencies]
